// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";
package datacommons.v2;

option go_package = "github.com/datacommonsorg/mixer/internal/proto/v2";

// Three modes are supported:
//
// 1. ID to ID:
//   nodes = ["wikidataId/CA", "wikidataId/MA"]
//   property = "<-wikidataId->nutsCode"
//
// 2. Coordinate (latitude#longitude) to DCID:
//   nodes = ["34.56#-23.12", "-22.11#44.55"] 
//   property = "<-geoCoordinate->dcid"
//
// 3. Description (name) to DCID:
//   nodes = ["Mountain View", "New York"]
//   property = "<-description->dcid" or "<-description{typeOf:City}->dcid"
message ResolveRequest{
    repeated string nodes = 1;
    string property = 2;

    // Optional name of a specific custom resolver to use.
    // If not provided, defaults to place resolution using the property param.
    // Supported Values:
    // - "indicator": Resolves Statistical Variables and Topics.
    string resolver = 3;

    // Optional target for the resolution request.
    // This parameter controls which Data Commons instances are used for resolution.
    // Supported Values:
    // - "base_only": Uses only the base Data Commons instance (remote).
    // - "custom_only": Uses only the custom Data Commons instance (local).
    // - "base_and_custom": Uses both base and custom instances.
    string target = 4;
}

message ResolveResponse{
    message Entity {
        message Candidate {
            // The DCID of the resolved entity.
            string dcid = 1;

            // The dominant type of the entity (e.g. "Place", "StatisticalVariable").
            string dominant_type = 2;

            // Auxiliary information describing the match quality or context.
            // Flexible key-value pairs depending on the resolver used.
            // 
            // For resolver="indicator":
            // - "score": The cosine similarity score of the match (e.g. "0.98").
            // - "sentence": The specific description sentence that matched the query.
            map<string, string> metadata = 3;

            // All types associated with this entity.
            repeated string type_of = 4;
        }
        string node = 1;
        repeated Candidate candidates = 3;

        reserved 2;
    }
    repeated Entity entities = 1;
}